# rs-stellar-rpc-client

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md
.cargo/: config.toml
.github/: dependabot.yml
.github/actions/setup-go/: action.yml
.github/workflows/: dependency-check.yml  rust.yml  socket-scan.yml
src/: lib.rs
src/fixtures/: curr_simulation_response.json  curr_transaction_response.json  events_response_p22.json  events_response_p23.json  new_event_response.json  new_transaction_response.json  simulation_response.json  transaction_response_p22.json  transaction_response_p23.json  transactions_response.json
src/log/: diagnostic_events.rs
