[package]
name = "stellar-rpc-client"
description = "Stellar RPC client for rust"
homepage = "https://github.com/stellar/rs-stellar-rpc-client"
repository = "https://github.com/stellar/rs-stellar-rpc-client"
authors = ["Stellar Development Foundation <info@stellar.org>"]
license = "Apache-2.0"
readme = "README.md"
version = "26.0.0-rc.2"
edition = "2021"
rust-version = "1.93.0"
autobins = false


[lib]
crate-type = ["rlib"]


[dependencies]
stellar-strkey = "0.0.15"
stellar-xdr = { version = "26.0.1", features = ["curr", "std", "serde", "base64"] }


termcolor = "1.1.3"
termcolor_output = "1.0.1"
clap = { version = "4.6.1", features = ["derive"] }
serde_json = "1.0.82"
serde-aux = "4.7.0"
itertools = "0.10.0"
hex = "0.4.3"
thiserror = "1.0.46"
serde = "1.0.82"
serde_with = "3.18.0"
tokio = "1.52.1"
sha2 = "0.10.7"

# networking
jsonrpsee-http-client = "0.26.0"
jsonrpsee-core = "0.26.0"
http = "1.4.0"
